Shadow pass error: Black shadow #47025

Closed
opened 2015-12-20 21:57:00 +01:00 by Alexey · 9 comments

System Information
Operating system and graphics card

Blender Version
Broken: (all)
Worked: (none)

Short description of error
1.png
2.png
3.png
4.png
5.png
Exact steps for others to reproduce the error
black_shadow_bug.blend
open, render - we will see unneed texture in shadow pass
switch off this texture(or correct it's value level) - proper result
set to any material diffuse color with value more than zero - proper result
set to any material diffuse color with value equal zero - bug
P.S. i don't know what about Cycles render - i don't learn cycles

**System Information** Operating system and graphics card **Blender Version** Broken: (all) Worked: (none) **Short description of error** ![1.png](https://archive.blender.org/developer/F269855/1.png) ![2.png](https://archive.blender.org/developer/F269857/2.png) ![3.png](https://archive.blender.org/developer/F269859/3.png) ![4.png](https://archive.blender.org/developer/F269861/4.png) ![5.png](https://archive.blender.org/developer/F269863/5.png) **Exact steps for others to reproduce the error** [black_shadow_bug.blend](https://archive.blender.org/developer/F269865/black_shadow_bug.blend) open, render - we will see unneed texture in shadow pass switch off this texture(or correct it's value level) - proper result set to any material diffuse color with value more than zero - proper result set to any material diffuse color with value equal zero - bug P.S. i don't know what about Cycles render - i don't learn cycles
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Inwader77

Added subscriber: @Inwader77
Author

6.png

![6.png](https://archive.blender.org/developer/F269868/6.png)

Added subscriber: @mont29

Added subscriber: @mont29

Main issue here was caused by shadow pass being skipped when diffuse was pitch black - makes sense if you only use that pass internally, since it’s useless with black diffuse color, but not when you want shadow pass for itself. Fix for that is incoming.

Issue with picture tex being noisy I still so not understand…

Main issue here was caused by shadow pass being skipped when diffuse was pitch black - makes sense if you only use that pass internally, since it’s useless with black diffuse color, but not when you want shadow pass for itself. Fix for that is incoming. Issue with picture tex being noisy I still so not understand…

Texture noise comes from some 'instability' of aniso filtering, which generates some pixels with not exactly 1.0 alpha values like 0.999999940395355

Enough for this evening! :P

Texture noise comes from some 'instability' of aniso filtering, which generates some pixels with not exactly 1.0 alpha values like `0.999999940395355`… Enough for this evening! :P
Author

similar behavior we will have in #45214 and in #47033 max saturation material(without texture) - we will see this color in shadow pass,
use texture - we will see max saturation area only. If we use image testure - we will have this noize.

similar behavior we will have in #45214 and in #47033 max saturation material(without texture) - we will see this color in shadow pass, use texture - we will see max saturation area only. If we use image testure - we will have this noize.

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2016-01-24 11:15:44 +01:00

OK, so issue is basically how final shadow pass is being generated by internal, reconstructing it from a diffuse + shadow data. This works OK(ish) in common cases, but will break in all corner cases like pitch black (0.0f), fully saturated (1.0f) colors, etc. Fixing it would most likely require to keep a separated , only-shadow pass, which is totally outside of bug fixing scope - and quite unlikely to ever happen actually, given we do not do any new development for BI… Thanks for the report anyway.

OK, so issue is basically how final shadow pass is being generated by internal, reconstructing it from a diffuse + shadow data. This works OK(ish) in common cases, but will break in all corner cases like pitch black (0.0f), fully saturated (1.0f) colors, etc. Fixing it would most likely require to keep a separated , only-shadow pass, which is totally outside of bug fixing scope - and quite unlikely to ever happen actually, given we do not do any new development for BI… Thanks for the report anyway.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#47025
No description provided.